Refactor: Eliminación completa del módulo de envíos y refactorización de la estructura de pedidos